# solomon-monorepo

./: .dockerignore  .eslintrc.json  .flake8  .gitattributes  .gitignore  .prettierignore  .prettierrc  Dockerfile  README.md  hardhat.config.ts  index.html  jest.config.js  json-schema-to-typescript.d.ts  nx.json  package-lock.json  package.json  pathStore.ts  release.config.js  skaffold.api.yaml  skaffold.backend.yaml  skaffold.base.yaml  skaffold.blockchain.yaml  skaffold.frontend.yaml  skaffold.yaml  subset.config.js  tsconfig.base.json  workspace.json
.husky/: commit-msg  post-commit  pre-commit  pre-push
apps/api-dispute/: .env.dist  Dockerfile  README.md  project.json  pyproject.toml
apps/api-dispute/src/: extract_schema.py  generate_openapi.py  main.py
apps/api-dispute/src/app/: config.py
apps/api-dispute/src/app/api/: __init__.py  events.py
apps/api-dispute/src/app/crud/: base.py
apps/api-dispute/src/app/db/: base.py  init_db.py
apps/api-dispute/src/app/migrations/: env.py
apps/api-dispute/src/app/migrations/versions/: a300a0bd1154_initial_migration.py
apps/api-dispute/src/app/models/: __init__.py  event.py  event_fixtures.py
apps/api-dispute/src/app/schemas/: __init__.py  event.py
apps/api-dispute/src/app/tests/: test_api.py
apps/api-dispute/src/app/utils/: __init__.py  deps.py  security.py  typing.py
apps/api-evidence/: .dockerignore  .env.dist  .pylintrc  Dockerfile  README.md  project.json  pyproject.toml  run_postgres_api_evidence.sh
apps/api-evidence/src/: .env.dist  alembic.ini  initial_data.py  main.py  pre_start.py
apps/api-evidence/src/app/: config.py
apps/api-evidence/src/app/api/: __init__.py  auth.py  evidence.py  evidences.py  upload_item.py  user.py  users.py
apps/api-evidence/src/app/crud/: __init__.py  crud_evidence.py  crud_item.py  crud_user.py
apps/api-evidence/src/app/db/: base.py  base_class.py  init_db.py
apps/api-evidence/src/app/migrations/versions/: 3543c7aaeaae_rename_upload_items_table.py  8d1846e367ef_initial_migration.py
apps/api-evidence/src/app/models/: __init__.py  evidence.py  upload_item.py  user.py
apps/api-evidence/src/app/schemas/: __init__.py  auth.py  evidence.py  token.py  upload_item.py  user.py
apps/api-evidence/src/app/storage/: __init__.py  security.py
apps/api-evidence/src/app/storage/backend/: __init__.py  s3.py
apps/api-evidence/src/app/tests/: conftest.py  test_api.py  test_auth.py  test_s3.py
apps/api-evidence/src/app/tests/utils/: __init__.py  evidence.py  upload_item.py  user.py
apps/api-evidence/src/app/utils/: deps.py  security.py  types.py
apps/db/: Dockerfile  (+4 more)
assets/: Home.45dee081.js  app.5e88432e.js  contracts_api.md.444c9933.lean.js  contracts_customization.md.2a263683.js  contracts_customization.md.2a263683.lean.js  contracts_index.md.be15c69e.js  contracts_index.md.be15c69e.lean.js  guide_code-of-conduct.md.6b582eb5.js  guide_code-of-conduct.md.6b582eb5.lean.js  guide_commit-format.md.d7b997ad.js  guide_commit-format.md.d7b997ad.lean.js  guide_contributing.md.d2df871d.js  guide_contributing.md.d2df871d.lean.js  guide_index.md.4994f56d.js  guide_index.md.4994f56d.lean.js  guide_technology.md.dfbf51f7.js  guide_technology.md.dfbf51f7.lean.js  guide_why-solomon.md.bde29431.lean.js  index.md.492655c7.js  plugin_api.md.8ccf34e9.js  plugin_index.md.74e5d61e.js  plugin_index.md.74e5d61e.lean.js  plugin_shopping.md.dc466be6.js  plugin_theming.md.af8a74aa.js  plugin_theming.md.af8a74aa.lean.js  style.33ace45e.css  utilities_index.md.3bc959d5.js  utilities_index.md.3bc959d5.lean.js  utilities_mailer.md.6c0a5ff3.js  utilities_mailer.md.6c0a5ff3.lean.js  utilities_shortener.md.0520c30b.js  utilities_shortener.md.0520c30b.lean.js
contracts/: api.html  customization.html  index.html
guide/: code-of-conduct.html  commit-format.html  contributing.html  index.html  technology.html  why-solomon.html
plugin/: api.html  index.html  shopping.html  theming.html
(+593 files in other folders)
