[tool.poetry]
name = "solomon-dispute-backend"
version = "0.1.0"
description = "A FastAPI (Python) app for uploading Solomon dispute evidence files to the blockchain"
authors = ["Solomon Defi <solomondefi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9"
SQLAlchemy = "^1.4.0"
tenacity = "^8.0.1"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
alembic = "^1.7.0"
eth-utils = "^1.10.0"
eth-hash = {extras = ["pycryptodome"], version = "^0.3.2"}
cytoolz = "0.11.2"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
sqlalchemy-stubs = "^0.4"
black = "*"
flake8 = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-comprehensions = "*"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
show_column_numbers = true
disallow_untyped_defs = true
no_warn_no_return = true
plugins = ["sqlmypy"]
exclude = "migrations"

[tool.black]
include = '\.py$'
skip-string-normalization = true
exclude = "migrations"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
