[tool.poetry]
name = "solomon-evidence-uploader-backend"
version = "0.1.0"
description = "A FastAPI (Python) app for uploading Solomon dispute evidence files to the blockchain"
authors = ["Solomon Defi <solomondefi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
uvicorn = "^0.14.0"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
psycopg2 = "^2.9.0"
SQLAlchemy = "^1.4.23"
tenacity = "^8.0.1"
email-validator = "^1.1.3"
python-dotenv = "^0.19.0"
requests = "^2.26.0"
python-multipart = "^0.0.5"
eth-account = "^0.5.5"
alembic = "^1.7.3"
boto3 = "^1.19.0"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
sqlalchemy-stubs = "^0.4"
moto = {extras = ["s3"], version = "^2.2.8"}
boto3-stubs = {extras = ["s3"], version = "^1.18.49"}
black = "*"
flake8 = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-import-order = "*"
flake8-comprehensions = "*"

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"
show_column_numbers = true
disallow_untyped_defs = true
no_warn_no_return = true
plugins = ["sqlmypy"]
exclude = "migrations"

[tool.black]
include = '\.py$'
skip-string-normalization = true
exclude = "migrations"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"
